[package]
name = "port-sniffer"
version = "0.1.0"
edition = "2021"
authors = ["Anas Elgarhy <anas.elgarhy.dev@gmail.com>"]
description = "A simple port sniffer(scanner) implementation with 🦀"
license = "MIT"
keywords = ["port", "scanner", "sniffer"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
