[package]
name = "ports-sniffer"
version = "0.1.3"
edition = "2021"
authors = ["Anas Elgarhy <anas.elgarhy.dev@gmail.com>"]
description = "A simple port sniffer(scanner) implementation with 🦀"
license = "MIT"
include = [
    "src/**/*.rs",
    "Cargo.toml",
    "LICENSE",
    "README.md",
]
keywords = [
    "ports-scanner",
    "scanner",
    "ports-sniffer"
]
repository = "https://github.com/anas-elgarhy/ports-sniffer"
homepage = "https://github.com/anas-elgarhy/ports-sniffer"

# See https://crates.io/category_slugs for more categories
categories = [
    "command-line-utilities",
    "network-programming"
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colored = "2.0.0"
local-ip-address = "0.5.1"
